--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,9 @@
     border-bottom: 1px solid #CCC;
 }
 
+#navbarNav {
+    
+}
 .navbar .nav-item a {
     color:#212529;
 }
@@ -65,6 +68,11 @@
 
 #search-from .col-md-10, #search-form .col-md-2 {
     padding: 0;
+    
+}
+
+#search-form, .form-inline {
+    display: flex;
 }
 
 #search-form input, #search-form button {
@@ -196,3 +204,126 @@
 
 }
 
+
+/* job-view */
+#job-view-container {
+    margin-top: 100px;
+}
+
+#job-view-container h1{
+    margin-bottom: 30px;
+}
+
+#img-container {
+
+    margin-top: 20px;
+    margin-bottom: 30px;
+
+}
+#img-container img {
+    width: 100px;
+    border-radius: 50%;
+    border: 1px solid #212529;
+
+}
+
+.job-desc {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.main-color {
+    color: #F03E3E;
+}
+
+.back-link {
+    border: 1px solid #F03E3E;
+    padding: 5px 10px;
+    transition: .5s;
+    
+
+}
+
+.back-link:hover {
+    background-color: #F03E3E;
+    color: #FFF;
+    text-decoration: none;
+
+}
+
+
+/* responsivo */
+
+@media (max-width: 481px) {
+        /* navbar */
+        #nabarNav {
+            text-align: center;
+        }
+        #top-container {
+            padding: 50px;
+            padding-top: 100px;
+        }
+        #main-title {
+            font-size: 2.2rem;
+        }
+        #main-subtitle {
+            font-size: 1.5rem;
+        }
+        #search-form {
+            padding: 0;
+        }
+        #jobs-container {
+            padding: 20px;
+        }
+        .list-group-item{
+            padding: 15px 85px;
+
+        }
+        .list-group-item h2 {
+            font-size: 1.2rem;
+            width: 80%;
+            
+
+        }
+        .list-group-item img {
+            width: 50px;
+            left: 15px;
+            top: calc(50% - 25px);
+        }
+        .new-job .new-job-label {
+            display: none;
+        }
+
+        /* job view */
+
+        .back-link {
+            margin-left: 30px;
+        }
+
+        #job-voew-container p {
+            font-size: 1.3rem;
+        }
+
+        .job-desc {
+            width: 80%;
+        }
+
+        /* add view */
+
+        #form-box {
+            padding: 25px;
+        }
+
+        #form-box h2 {
+            font-size: 1rem;
+            text-align: center;
+        }
+        #form-box bottom {
+            width: 100%;
+        }
+ }
